--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'openjdk'
+          distribution: 'temurin'
 
       # Кэшируем зависимости Maven для ускорения сборки
       - name: Cache Maven dependencies
